--- a/www/theme_extra/css/override_avalanche.css
+++ b/www/theme_extra/css/override_avalanche.css
@@ -21,12 +21,12 @@ div.presentation, div.slide {
   background-color: #191919; /* colour of the slide */
 }
 
-div.slide h1{
+div.slide h1, div.slide h2 {
   color: #4677a1;
   font-weight: normal;
 }
 
-div.slide h2, div.slide h3, div.slide h4, div.slide h5, div.slide h6  {
+div.slide h3, div.slide h4, div.slide h5, div.slide h6  {
   color: #fff;
 }
 
