--- a/talks/workflow-git-2014.css
+++ b/talks/workflow-git-2014.css
@@ -10,3 +10,19 @@
   height: 350px;
   font-size: 50pt;
 }
+
+footer {
+ position: absolute;
+ bottom: 0;
+ right: 5px;
+ font-size: 14pt;
+ color: #ddd;
+}
+
+.imageslide footer {
+  display: none;
+}
+
+footer:after {
+  content: "@__fle__ / HumanTalks Nantes 03/2014";
+}
